# GGJ19

./: .gitignore  CMakeLists.txt  Haxoria.cpp  Haxoria.sln  Haxoria.vcxproj  Haxoria.vcxproj.filters  Makefile  README.md  imgui.ini
data/: banyador.frag  nightLight.frag
funlib/: FUN_Random.cpp  FUN_Random.h
gaem/: DayManager.cpp  DayManager.h  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  ObjectManager.cpp  ObjectManager.h  Perlin.cpp  Perlin.h  gaem.filters  gaem.sln  gaem.vcxproj  gaem.vcxproj.filters  imgui-SFML.cpp  imgui-SFML.h  main.cpp  math.h  stb_rect_pack.h
imgui/: imconfig.h  imgui_draw.cpp
